--- a/lab08/prj/ModulesTeliga/ModulesTeliga.cbp
+++ b/lab08/prj/ModulesTeliga/ModulesTeliga.cbp
@@ -34,7 +34,8 @@
 				</Linker>
 			</Target>
 		</Build>
-		<Unit filename="main.c">
+		<Unit filename="ModulesTeliga.h" />
+		<Unit filename="main.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions>
